# pyadvcourse

./: README.md  pyproject.toml
.github/workflows/: ci_deploy.yml  ci_simple.yml
src/pyadvcourse/: __init__.py  algos.py
tests/: test_pyadvcourse.py
