# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "pyadvcourse"
description = "Demo package for course"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "guillaume.witz@unibe.ch", name = "Guillaume Witz" },
]
dynamic = ["version"]
dependencies = ["pandas"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyadvcourse/_version.py"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/guiwitz/pyadvcourse"
repository = "https://github.com/guiwitz/pyadvcourse"
